[tool.poetry]
name = "parallelizer"
version = "0.1.0"
description = "A utility to concurrently make requests, with an optional rate limit. Powered by asyncio and aiohttp"
authors = ["Sphericalkat <amolele@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
